# crossrefapi

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
crossref/: __init__.py  client.py  restful.py  utils.py  validators.py
src/crossref/: restful.py  utils.py  validators.py
tests/: test_integration.py  test_restful.py  test_validators.py
