[tool.poetry]
name = "crossrefapi"
version = "1.6.1"
description = "Library that implements the endpoints of the Crossref API"
authors = ["Fabio Batalha <fabio.batalha@erudit.org>"]
packages = [
  { include = "crossref",  from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
urllib3 = "1.26.19"
ipython = "^8.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.277"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
