[tool.poetry]
name = "crossrefapi"
version = "1.7.0"
description = "Library that implements the endpoints of the Crossref API"
authors = ["Fabio Batalha <fabio.batalha@erudit.org>"]
packages = [
  { include = "crossref",  from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
urllib3 = "^2.2.3"
ipython = "^8.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.277"
pre-commit = "^3.3.3"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
